Fixed Collapsing issues. Made the icon same ease duration as the collapse

--- a/www/css/plexNotes.css
+++ b/www/css/plexNotes.css
@@ -51,6 +51,10 @@ input[type="checkbox"].checked ~ .cb-label:before {
     background-position: 0 -40px;
 }*/
 
+.gsclear {
+
+}
+
 .ease-all {
     transition: all 1.11s ease-in-out;
 }
@@ -273,16 +277,19 @@ select > option {
 }
 
 .note-header {
-    background-color: #1b6d85;
+    background-color: #3f3f3f;
     color: #dadada;
     font-weight: bold;
     text-shadow: 2px 2px 2px rgba(2, 2, 0, 1);
 }
 
 .note-sub-header {
-    background-color: rgba(45, 121, 163, 1);
+    background-color: rgb(17, 17, 17);
     border-bottom: outset #000000;
     color: #dadada;
+    -webkit-box-shadow: 0 0 6px 0 rgba(170, 170, 170, 0.8);
+    -moz-box-shadow: 0 0 6px 0 rgba(170, 170, 170, 0.8);
+    box-shadow: 0 0 6px 0 rgba(170, 170, 170, 0.8);
 }
 
 .note-notes {
